heres what i got!

--- a/sales.html
+++ b/sales.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 
+<link href="css/reset.css" rel = "stylesheet"/>
+<link href="css/style.css" rel = "stylesheet"/>
+<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+
+
+
 <head>
   <meta charset="utf-8">
   <title>Cookie-sales</title>
@@ -9,22 +15,10 @@
 <body>
   <h1>Seattle-area Salmon Cookie sales, 1/14/2019</h1>
 
-  <h2>Pike and 1st</h2>
-  <ul id="pike"></ul>
-
-  <h2>SeaTac</h2>
-  <ul id="seaTac"></ul>
-
-  <h2>Seattle Center</h2>
-  <ul id="center"></ul>
-
-  <h2>Capitol Hill</h2>
-  <ul id="capHill"></ul>
-  
-  <h2>Alki Beach</h2>
-  <ul id="alki"></ul>
+  <table id="cookieTable"></table>
 
   <script src="app.js"></script>
+
 </body>
 
 </html>
