forgot to add and commit again today, but better late than never

--- a/sales.html
+++ b/sales.html
@@ -17,6 +17,26 @@
 
   <table id="cookieTable"></table>
 
+
+  <h2>Add Locations</h2>
+
+    <form id="newLocation">
+      <fieldset
+        <legend>New location submission form</legend>
+
+        <label for="location">Location:</label>
+        <input name="location" type="text" size="10" />
+        <label for="min">Min:</label>
+        <input name="min" type="text" size="10" />
+        <label for="max">Max:</label>
+        <input name="max" type="text" size="10" />
+        <label for="avg">Avg:</label>
+        <input name="avg" type="text" size="10" />
+        <button type="submit">Create new location</button>
+      </fieldset>
+    </form>
+
+
   <script src="app.js"></script>
 
 </body>
