--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <link href="css/frontstyle.css" rel = "stylesheet"/>
 
   <body>
-    <img src-"img/logo1.0.png" alt-"Who wouldnt want SALMON in their cookies?" title-"Salmon Cookies!" />
+  <a href="inside.html" id="logo"><img src="img/logo1.0.png" alt="Who wouldnt want SALMON in their cookies?" title="Salmon Cookies!" /></a>
   </body>
 </html>
