updated a couple things

--- a/merch.html
+++ b/merch.html
@@ -6,23 +6,33 @@
 
     <title>Cookies</title>
     <link rel="stylesheet" href="css/reset.css" type="text/css" />
-    <link rel="stylesheet" href="css/insidestyle.css" type="text/css" />
+    <link rel="stylesheet" href="css/merch.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
   </head>
   <body>
     <header>
       <nav>
           <a href="index.html" id="logo"><img src="img/logobutton200x121.png" alt="logo" title="logo"/></a>
-          <a href="merch.html" id="merch">Merch</a>      
+          <a href="inside.html" id="merch">Home</a>      
           <a href="sales.html" id="sales">Sales</a>
            
       </nav>
     </header>
     <main>
-        <img src="img/family.jpg" alt="hero" title="hero"/>
+        <ul>
+          <li>
+            <img src="img/cutter.jpeg" alt="cutter" title="cutter"/>
+          </li>
+          <li>
+            <img src="img/fish.jpg" alt="plush pillows" title="plush pillows"/>
+          </li>
+          <li>
+            <img src="img/shirt.jpg" alt="t-shirt" title="t-shirt"/>
+          </li>
+        </ul>
         <section>
-          <h2>Get Salmon Cookies Delivered!</h2>
-          <button>Order Salmon Cookies!</button>
+          <h2>Get Salmon Cookies Merch Delivered!</h2>
+          <button>Order Salmon Cookies Merch!</button>
           <p id="or">or,</p>
           <p>Look for the nearest Salmon Cookie location to you!</p>
         </section>
